--- a/Pages/Products/Product.razor
+++ b/Pages/Products/Product.razor
@@ -1,8 +1,8 @@
 ﻿<div class="card h-100 bg-light text-dark border-0">
     <div class="card-body">
-        <h3>@item.title</h3> 
-        <small>@item.description</small>
-        <small>количество: @item.count</small>
+        <h4>@item.title</h4> 
+        <small>@item.description</small><br />
+        <small>количество: @item.count</small><br/>
         <small>цена: @item.price</small>
     </div>
     <img class="img-fluid rounded-bottom" src="@item.image"/>
